s Fixed so the modal content is visible in mobile

--- a/public/css/playersStyles.css
+++ b/public/css/playersStyles.css
@@ -28,7 +28,7 @@ li:hover {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: fit-content;
 }
 
 .close {
